chore: remove illegal JSON content

--- a/openapi-hub/frameworks/assets/gnostic/devcontainer.json
+++ b/openapi-hub/frameworks/assets/gnostic/devcontainer.json
@@ -1,8 +1,9 @@
 {
   "name": "Go",
-  // Override the default dockerfile to use our custom Dockerfile
-  "dockerComposeFile": ["../docker-compose.yaml", "docker-compose.yaml"],
-
+  "dockerComposeFile": [
+    "../docker-compose.yaml",
+    "docker-compose.yaml"
+  ],
   "service": "app",
   "workspaceFolder": "/app",
   "shutdownAction": "stopCompose"
