chore: update workflow

--- a/.github/workflows/sync-to-private.yaml
+++ b/.github/workflows/sync-to-private.yaml
@@ -42,6 +42,10 @@ jobs:
                   rsync -a --delete api-design/ private-repo/content/api-design/
                   rsync -a --delete docs/ private-repo/content/docs/
                   rsync -a --delete examples/ private-repo/content/examples/
+                  rsync -a --delete guides/ private-repo/content/guides/
+                  rsync -a --delete mcp/ private-repo/content/mcp/
+                  rsync -a --delete openapi/ private-repo/content/openapi/
+
             - name: Commit and push changes to private repo
               run: |
                   cd private-repo
