--- a/.github/workflows/sync-to-private.yaml
+++ b/.github/workflows/sync-to-private.yaml
@@ -23,16 +23,9 @@ jobs:
               with:
                   fetch-depth: 0
 
-            - name: Generate GitHub App token
-              id: generate_token
-              uses: tibdex/github-app-token@v2
-              with:
-                  app_id: ${{ secrets.SYNC_APP_ID }}
-                  private_key: ${{ secrets.SYNC_APP_KEY }}
-
             - name: Clone private repo
               env:
-                  TOKEN: ${{ steps.generate_token.outputs.token }}
+                  TOKEN: ${{ steps.SERVICE_BOT_TOKEN }}
               run: |
                   git clone https://x-access-token:${TOKEN}@github.com/${SYNC_REPO}.git private-repo
 
