chore: update GH action

--- a/.github/workflows/sync-to-private.yaml
+++ b/.github/workflows/sync-to-private.yaml
@@ -25,7 +25,7 @@ jobs:
 
             - name: Clone private repo
               env:
-                  TOKEN: ${{ steps.SERVICE_BOT_TOKEN }}
+                  TOKEN: ${{ secrets.SERVICE_BOT_TOKEN }}
               run: |
                   git clone https://x-access-token:${TOKEN}@github.com/${SYNC_REPO}.git private-repo
 
