--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -78,29 +78,62 @@ jobs:
                   VERCEL_PROJECT_ID: ${{ secrets.MARKETING_SITE_VERCEL_ID }}
                   VERCEL_TEAM_ID: ${{ secrets.VERCEL_TEAM_ID }}
               run: |
-                  sleep 10
-                  for i in {1..20}; do
-                    echo "Polling for Vercel deployment for $BRANCH_NAME... (attempt $i)"
+                  echo "Waiting 4.5 minutes before polling Vercel..."
+                  sleep 270  # 4.5 min
+
+                  polls=0
+                  max_polls=20
+                  branch="$BRANCH_NAME"
+
+                  while [ $polls -lt $max_polls ]; do
+                    echo "⏳ Poll #$((polls + 1)) — checking Vercel deployment status..."
+
                     response=$(curl -s -H "Authorization: Bearer $VERCEL_TOKEN" \
                       "https://api.vercel.com/v6/deployments?projectId=$VERCEL_PROJECT_ID&target=preview&teamId=$VERCEL_TEAM_ID&limit=5")
 
-                    deploy=$(echo "$response" | jq -r --arg branch "$BRANCH_NAME" '.deployments[] | select(.meta.githubBranch == $branch) | .url' | head -n 1)
+                    deployment_info=$(echo "$response" | jq -r --arg branch "$branch" '
+                      .deployments[] | select(.meta.githubBranch == $branch) |
+                      {id: .id, url: .url, status: .readyState}
+                    ' | jq -s '.[0]')
 
-                    if [ -n "$deploy" ]; then
-                      echo "Found deployment: $deploy"
-                      echo "url=https://$deploy" >> $GITHUB_OUTPUT
-                      exit 0
+                    if [ "$deployment_info" != "null" ]; then
+                      deploy_id=$(echo "$deployment_info" | jq -r '.id')
+                      deploy_url=$(echo "$deployment_info" | jq -r '.url')
+                      deploy_status=$(echo "$deployment_info" | jq -r '.status')
+
+                      echo "Status: $deploy_status"
+
+                      if [ "$deploy_status" = "READY" ]; then
+                        echo "✅ Deployment is ready at https://$deploy_url"
+                        echo "url=https://$deploy_url" >> $GITHUB_OUTPUT
+                        echo "comment=✅ **Vercel preview is ready**: [View deployment](https://$deploy_url)" >> $GITHUB_OUTPUT
+                        exit 0
+                      elif [ "$deploy_status" = "ERROR" ]; then
+                        echo "❌ Deployment failed"
+                        echo "comment=❌ **Vercel deployment failed.** Check the [Vercel dashboard](https://vercel.com) for more info." >> $GITHUB_OUTPUT
+                        exit 0
+                      else
+                        echo "🟡 Deployment in progress..."
+                      fi
+                    else
+                      echo "⚠️ No deployment found yet for branch $branch"
                     fi
 
-                    sleep 5
+                    polls=$((polls + 1))
+
+                    # First 10 polls use 10s, rest use 30s
+                    if [ $polls -lt 10 ]; then
+                      sleep 10
+                    else
+                      sleep 30
+                    fi
                   done
 
-                  echo "Timed out waiting for Vercel deployment."
-                  exit 1
+                  echo "❌ Timed out after $max_polls polls waiting for Vercel deployment."
+                  echo "comment=❌ **Timed out** waiting for Vercel preview deployment after $(($max_polls < 10 ? 270 + $max_polls * 10 : 270 + 10 * 10 + ($max_polls - 10) * 30)) seconds." >> $GITHUB_OUTPUT
+                  exit 0
 
             - name: Comment with Vercel Preview
               uses: marocchino/sticky-pull-request-comment@v2
               with:
-                  message: |
-                      🚀 **Preview your content changes here**:  
-                      🔗 [View on Vercel](${{ steps.wait-for-vercel.outputs.url }})
+                  message: ${{ steps.wait-for-vercel.outputs.comment }}
