chore: fix typos * chore: update pr preview workflow

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -81,7 +81,7 @@ jobs:
                   git config user.name "VercelBot"
                   git config user.email "vercel@bot.com"
                   git add .
-                  git commit -m "CI preview deploy commit"
+                  git diff --cached --quiet || git commit -m "CI preview deploy commit"
 
             - name: Deploy to Vercel
               id: vercel
