chore: fix typos * chore: update pr preview workflow

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -100,11 +100,11 @@ jobs:
 
             - name: Wait for Vercel Deployment
               id: wait
-              uses: vercel/wait-for-deployment@v1
+              uses: tj-actions/vercel-wait@v1
               with:
+                  project-id: ${{ secrets.VERCEL_PROJECT_ID }}
                   token: ${{ secrets.SERVICE_BOT_VERCEL }}
-                  deployment-id: ${{ steps.deploy.outputs.deployment-id }}
-                  timeout: 900
+                  sha: ${{ github.event.pull_request.head.sha }}
 
             - name: Update Sticky Comment with Success
               if: ${{ steps.wait.outputs.ready-state == 'READY' }}
