chore: fix typos * chore: update pr preview workflow

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -30,7 +30,7 @@ jobs:
               env:
                   TOKEN: ${{ secrets.SERVICE_BOT_TOKEN }}
               run: |
-                  git clone https://x-access-token:${TOKEN}@github.com/${{ secrets.SYNC_REPO }}.git private-repo
+                  git clone https://x-access-token:${TOKEN}@github.com/${SYNC_REPO}.git private-repo
                   cd private-repo
                   git checkout -B $BRANCH_NAME
 
@@ -67,8 +67,10 @@ jobs:
               working-directory: private-repo
               env:
                   VERCEL_TOKEN: ${{ secrets.SERVICE_BOT_VERCEL }}
+                  VERCEL_ORG_ID: ${{ secrets.VERCEL_TEAM_ID }}
+                  VERCEL_PROJECT_ID: ${{ secrets.MARKETING_SITE_VERCEL_ID }}
               run: |
-                  output=$(vercel --yes --token $VERCEL_TOKEN --scope ${{ secrets.VERCEL_TEAM_ID }})
+                  output=$(vercel --token $VERCEL_TOKEN --scope $VERCEL_ORG_ID --confirm --prod false)
                   echo "$output"
                   deployment_url=$(echo "$output" | grep -o 'https://[^ ]*\.vercel\.app' | tail -n1)
                   echo "deployment-url=$deployment_url" >> $GITHUB_OUTPUT
@@ -81,4 +83,4 @@ jobs:
                   message: |
                       🔗 **Preview your changes**:  
                       [View on Vercel](${{ steps.deploy.outputs.deployment-url }})  
-                      _(deployment may still be building)_
+                      _(This link may still be building...)_
