chore: fix typos * chore: update pr preview workflow

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -70,7 +70,7 @@ jobs:
                   VERCEL_ORG_ID: ${{ secrets.VERCEL_TEAM_ID }}
                   VERCEL_PROJECT_ID: ${{ secrets.MARKETING_SITE_VERCEL_ID }}
               run: |
-                  output=$(vercel --token $VERCEL_TOKEN --scope $VERCEL_ORG_ID --confirm --prod false)
+                  output=$(vercel --token $VERCEL_TOKEN --scope $VERCEL_ORG_ID --yes)
                   echo "$output"
                   deployment_url=$(echo "$output" | grep -o 'https://[^ ]*\.vercel\.app' | tail -n1)
                   echo "deployment-url=$deployment_url" >> $GITHUB_OUTPUT
