--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -12,15 +12,10 @@ env:
     BRANCH_NAME: docs-preview/pr-${{ github.event.pull_request.number }}
 
 jobs:
-    preview-sync-and-deploy:
+    preview-sync:
         runs-on: ubuntu-latest
 
         steps:
-            - name: Install dependencies
-              run: |
-                  sudo apt-get update && sudo apt-get install -y jq
-                  npm install -g vercel
-
             - name: Checkout developer-docs PR
               uses: actions/checkout@v4
               with:
@@ -62,25 +57,17 @@ jobs:
                   git commit -m "🔍 Preview sync from developer-docs PR #${{ github.event.pull_request.number }}"
                   git push origin $BRANCH_NAME --force
 
-            - name: Deploy to Vercel via CLI
-              id: deploy
-              working-directory: private-repo
-              env:
-                  VERCEL_TOKEN: ${{ secrets.SERVICE_BOT_VERCEL }}
-                  VERCEL_ORG_ID: ${{ secrets.VERCEL_TEAM_ID }}
-                  VERCEL_PROJECT_ID: ${{ secrets.MARKETING_SITE_VERCEL_ID }}
-              run: |
-                  output=$(vercel --token $VERCEL_TOKEN --scope $VERCEL_ORG_ID --yes)
-                  echo "$output"
-                  deployment_url=$(echo "$output" | grep -o 'https://[^ ]*\.vercel\.app' | tail -n1)
-                  echo "deployment-url=$deployment_url" >> $GITHUB_OUTPUT
+    comment-vercel-preview:
+        needs: preview-sync
+        runs-on: ubuntu-latest
 
-            - name: Comment with Preview Link
+        steps:
+            - name: Comment with Predicted Vercel URL
               uses: marocchino/sticky-pull-request-comment@v2
               with:
                   number: ${{ github.event.pull_request.number }}
                   header: VercelPreview
                   message: |
-                      🔗 **Preview your changes**:  
-                      [View on Vercel](${{ steps.deploy.outputs.deployment-url }})  
-                      _(This link may still be building...)_
+                      🔗 **Preview your changes**  
+                      [https://speakeasycom-git-docs-preview-pr-${{ github.event.pull_request.number }}-speakeasyapi.vercel.app](https://speakeasycom-git-docs-preview-pr-${{ github.event.pull_request.number }}-speakeasyapi.vercel.app)  
+                      _(Branch: `docs-preview/pr-${{ github.event.pull_request.number }}` — preview builds automatically.)_
