chore: update workflow lang

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -70,4 +70,4 @@ jobs:
                   message: |
                       🔗 **Preview your changes**  
                       [https://speakeasycom-git-docs-preview-pr-${{ github.event.pull_request.number }}-speakeasyapi.vercel.app](https://speakeasycom-git-docs-preview-pr-${{ github.event.pull_request.number }}-speakeasyapi.vercel.app)  
-                      _(Branch: `docs-preview/pr-${{ github.event.pull_request.number }}` — preview builds automatically.)_
+                      _(The preview may still be building. Check back at this link in a few minutes.)_
