chore: update sync

--- a/.github/workflows/sync-to-private.yaml
+++ b/.github/workflows/sync-to-private.yaml
@@ -47,6 +47,32 @@ jobs:
                       echo "Warning: $src_dir does not exist, skipping..."
                     fi
                   done
+            
+            - name: Sync public assets into private repo content paths
+              run: |
+                set -euo pipefail
+                base_src="public/assets"
+                base_dest="private-repo/public/assets"
+                asset_dirs=(  
+                  "api-design"
+                  "docs"
+                  "guides"
+                  "mcp"
+                  "openapi"
+                )
+
+                for dir in "${asset_dirs[@]}"; do
+                  src_assets="${base_src}/${dir}"
+                  dest_assets="${base_dest}/${dir}"
+
+                  if [ -d "$src_assets" ]; then
+                    echo "Syncing assets $src_assets → $dest_assets"
+                    mkdir -p "$dest_assets"
+                    rsync -a --delete "$src_assets/" "$dest_assets/"
+                  else
+                    echo "Warning: $src_assets does not exist; no assets to sync."
+                  fi
+                done
 
             - name: Commit and push changes to private repo
               run: |
