--- a/.github/workflows/sync-to-private.yaml
+++ b/.github/workflows/sync-to-private.yaml
@@ -10,6 +10,7 @@ on:
             - "guides/**"
             - "mcp/**"
             - "openapi/**"
+            - "**public/assets/**"
 
 env:
     SYNC_REPO: ${{ secrets.SYNC_REPO }}
