chore: sync meta file

--- a/.github/workflows/sync-to-private.yaml
+++ b/.github/workflows/sync-to-private.yaml
@@ -75,6 +75,21 @@ jobs:
                   fi
                 done
 
+            - name: Sync _meta.global.tsx into private repo
+              run: |
+                set -euo pipefail
+
+                src_file="_meta.global.tsx"
+                dest_file="private-repo/src/app/_meta.global.tsx"
+
+                if [ -f "$src_file" ]; then
+                  echo "Syncing file $src_file → $dest_file"
+                  mkdir -p "$(dirname "$dest_file")"
+                  cp "$src_file" "$dest_file"
+                else
+                  echo "Warning: $src_file does not exist, skipping..."
+                fi
+
             - name: Commit and push changes to private repo
               run: |
                   set -euo pipefail
