chore: fix staging

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -128,23 +128,23 @@ jobs:
           org="${SYNC_REPO%%/*}"
           repo="${SYNC_REPO#*/}"
 
-          payload=$(jq -n \
-            --arg name "$VERCEL_PROJECT_NAME" \
-            --arg project "$VERCEL_PROJECT_ID" \
-            --arg org "$org" \
-            --arg repo "$repo" \
-            --arg ref "$BRANCH_NAME" \
-            '{
-              name: $name,
-              project: $project,
-              target: "preview",
-              gitSource: {
-                type: "github",
-                org: $org,
-                repo: $repo,
-                ref: $ref
-              }
-            }')
+                  payload=$(jq -n \
+                    --arg name "$VERCEL_PROJECT_NAME" \
+                    --arg project "$VERCEL_PROJECT_ID" \
+                    --arg org "$org" \
+                    --arg repo "$repo" \
+                    --arg ref "$BRANCH_NAME" \
+                    '{
+                      name: $name,
+                      project: $project,
+                      target: "staging",
+                      gitSource: {
+                        type: "github",
+                        org: $org,
+                        repo: $repo,
+                        ref: $ref
+                      }
+                    }')
 
           if [ -n "${VERCEL_GIT_REPO_ID:-}" ]; then
             payload=$(printf '%s' "$payload" | jq --arg repoId "$VERCEL_GIT_REPO_ID" '.gitSource.repoId = $repoId')
