chore: fix staging

--- a/.github/workflows/pr-preview-build.yaml
+++ b/.github/workflows/pr-preview-build.yaml
@@ -128,23 +128,23 @@ jobs:
           org="${SYNC_REPO%%/*}"
           repo="${SYNC_REPO#*/}"
 
-                  payload=$(jq -n \
-                    --arg name "$VERCEL_PROJECT_NAME" \
-                    --arg project "$VERCEL_PROJECT_ID" \
-                    --arg org "$org" \
-                    --arg repo "$repo" \
-                    --arg ref "$BRANCH_NAME" \
-                    '{
-                      name: $name,
-                      project: $project,
-                      target: "staging",
-                      gitSource: {
-                        type: "github",
-                        org: $org,
-                        repo: $repo,
-                        ref: $ref
-                      }
-                    }')
+          payload=$(jq -n \
+            --arg name "$VERCEL_PROJECT_NAME" \
+            --arg project "$VERCEL_PROJECT_ID" \
+            --arg org "$org" \
+            --arg repo "$repo" \
+            --arg ref "$BRANCH_NAME" \
+            '{
+              name: $name,
+              project: $project,
+              target: "staging",
+              gitSource: {
+                type: "github",
+                org: $org,
+                repo: $repo,
+                ref: $ref
+              }
+            }')
 
           if [ -n "${VERCEL_GIT_REPO_ID:-}" ]; then
             payload=$(printf '%s' "$payload" | jq --arg repoId "$VERCEL_GIT_REPO_ID" '.gitSource.repoId = $repoId')
@@ -173,7 +173,13 @@ jobs:
             exit 1
           fi
 
-          echo "deployment_url=$url" >> "$GITHUB_OUTPUT"
+          if [[ "$url" == http*://* ]]; then
+            full_url="$url"
+          else
+            full_url="https://$url"
+          fi
+
+          echo "deployment_url=$full_url" >> "$GITHUB_OUTPUT"
 
   comment-vercel-preview:
     needs: [preview-sync, create-vercel-deployment]
